--- a/ChimeSite.css
+++ b/ChimeSite.css
@@ -22,10 +22,11 @@
     background-color: rgb(243 243 243) !important;
 }
 
-.mg-container {
+/*.mg-container {
     width: 1400px;
     background-color: rgb(243 243 243);
 }
+*/
 
 .gf-page-container {
     margin: auto;
