--- a/ChimeSite.css
+++ b/ChimeSite.css
@@ -22,11 +22,11 @@
     background-color: rgb(243 243 243) !important;
 }
 
-/*.mg-container {
+.md-custom-code .mg-container {
     width: 1400px;
     background-color: rgb(243 243 243);
 }
-*/
+
 
 .gf-page-container {
     margin: auto;
